fix top spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -40,6 +40,7 @@
 // Global Styles
 
 .main-container {
+    padding-top: 50px;
     max-width: 1140px;
 }
 
